# docs/swagger.json
@@ -77,7 +77,7 @@
                 "tags": [
                     "calls"
                 ],
-                "summary": "Статистика по операторам устройств с разбивкой по платформам",
+                "summary": "GetDeviceCarrierStats",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -280,7 +280,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Возвращает список всех пользователей ДЦ (не админов панели), кто выполняет проверки.",
+                "description": "Возвращает список всех пользователей.",
                 "consumes": [
                     "application/json"
                 ],
@@ -288,9 +288,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "dc-users"
+                    "calls"
                 ],
-                "summary": "Получить список пользователей ДЦ",
+                "summary": "GetDCUsers",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -495,7 +495,7 @@
                 }
             }
         },
-        "/v1/analytics/devices/dedicated/users": {
+        "/v1/analytics/devices/dedicated/users/{id}": {
             "get": {
                 "security": [
                     {
